<resources>
    <string name="app_name" translatable="false">Reminder</string>

    <!-- Ad Mov -->
    <string name="banner_ad_unit_id">ca-app-pub-4376965998620656~4770310259</string>

    <!-- App Unit Id -->
    <string name="banner_ad_unit_id_reward">ca-app-pub-4376965998620656/5415632922</string>

    <!-- Test Unit Id -->
    <string name="banner_ad_unit_id_reward_test">ca-app-pub-3940256099942544/5224354917</string>

    <!-- MainActivity -->
    <string name="subject_et_hint">What should I remind you?</string>
    <string name="calendar_title_text">Tell me When</string>
    <string name="duration_title_text">How long will it take?</string>
    <string name="hours_spinner_title_text">It will take hours</string>
    <string name="event_repeat_title_text">Is it a weekly thing or a monthly or one time event?</string>
    <string name="event_time_before_title_text">How much time before I should notify?</string>
    <string name="animation_selection_title_text">Who of ours friend would you like to remind you?</string>
    <string name="animation_preview_button_text">Preview</string>
    <string name="alert_repeat_title_text">how many time should I remind you?</string>
    <string name="every_minute_alert_option_text">Every 1 Minute</string>
    <string name="every_three_minute_alert_option_text">Every 3 Minutes</string>
    <string name="every_five_minute_alert_option_text">Every 5 Minutes</string>
    <string name="add_sound_to_alert">I\'d like to add some noise</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_subject">Subject can not be empty</string>
    <string name="silence_tone">Silence</string>

    <!-- Alerts List Dialog -->
    <string name="alerts_list_title">Alerts List</string>
    <string name="alerts_list_sub_title">Click to edit</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>

    <!-- Alert before options -->
    <string name="on_time">On Time</string>
    <string name="before_1_minute">1 Minute Before</string>
    <string name="before_2_minutes">2 Minutes Before</string>
    <string name="before_5_minutes">5 Minutes Before</string>
    <string name="before_10_minutes">10 Minutes Before</string>
    <string name="before_15_minutes">15 Minutes Before</string>
    <string name="before_30_minutes">30 Minutes Before</string>
    <string name="before_60_minutes">1 Hour Before</string>
    <string name="before_120_minutes">2 Hours Before</string>
    <string name="event_starts_in_past">Event alraedy started! Please set another time.</string>

</resources>
