<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.em_projects.reminder.ui.custom_text.CustomTextView
        android:id="@+id/alertsListTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alerts_list_title"
        android:textSize="21sp"
        android:textStyle="bold"
        app:custom_font="caveat_bold" />

    <com.em_projects.reminder.ui.custom_text.CustomTextView
        android:id="@+id/alertsListSubTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alertsListTitleTextView"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/alerts_list_sub_title"
        android:textSize="14sp"
        android:textStyle="normal"
        app:custom_font="caveat_regular" />

    <ImageView
        android:id="@+id/alertsListListEmptyImage"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:src="@drawable/lao_tzu_s" />
    <!-- Image ratio 1:1.5 -->

    <ListView
        android:id="@+id/alertsListListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_above="@id/alertsListButtonsLayout"
        android:layout_below="@id/alertsListSubTitleTextView" />

    <LinearLayout
        android:id="@+id/alertsListButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <com.em_projects.reminder.ui.custom_text.CustomButton
            android:id="@+id/closeButton"
            style="@style/activityMainTextStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            app:custom_font="caveat_regular" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addEventFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:foregroundGravity="center"
        android:src="@drawable/ic_alarm_add_black_24dp"
        app:layout_anchor="@id/alertsListListEmptyImage"
        app:layout_anchorGravity="bottom|right|end"
        app:rippleColor="@android:color/transparent"
        android:visibility="gone"/>

</RelativeLayout>